examples/test/testpolicy816.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy816
  namespace: namespace237
spec:
  podSelector:
    matchLabels:
      key48: value41
      key44: value41
      key23: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value35
      podSelector:
        matchLabels:
          key42: value15
          key43: value41
          key6: value39
